--- a/1_programming/12_pandas.ipynb
+++ b/1_programming/12_pandas.ipynb
@@ -1233,15 +1233,24 @@
    "source": []
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "## Cheatsheet"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "https://pandas.pydata.org/Pandas_Cheat_Sheet.pdf"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
