--- a/1_programming/43_imgs.ipynb
+++ b/1_programming/43_imgs.ipynb
@@ -343,9 +343,25 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "# Reading in handwritten digits\n",
+    "\n",
+    "In this notebook, we will read in the handwritten digits dataset from the UCI Machine Learning Repository. The dataset consists of 1797 images of handwritten digits. Each image is a 2D array of pixels, where each pixel is an integer between 0 and 255. The images are 8x8 pixels, so there are 64 pixels in total. Each image is labeled with the digit it represents.\n",
+    "\n",
+    "You can find the dataset [here](https://archive.ics.uci.edu/ml/datasets/Optical+Recognition+of+Handwritten+Digits).\n",
+    "\n",
+    "## Reading in the data\n",
+    "\n",
+    "The data is stored in a CSV file. We can read it in using `pandas`.\n",
+    "\n",
+    "```python\n",
+    "import pandas as pd\n",
+    "df = pd.read_csv('../data/digits.csv')\n",
+    "```\n"
+   ]
   }
  ],
  "metadata": {
