--- a/2_maths/40_linearalgebra.ipynb
+++ b/2_maths/40_linearalgebra.ipynb
@@ -9,13 +9,124 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "print('Hello world')"
+    "Linear algebra is the branch of mathematics that deals with vector spaces. It is a fundamental tool in many fields, including data science and machine learning. In this section, we will review some of the basic concepts of linear algebra.\n",
+    "\n",
+    "## Vectors\n",
+    "\n",
+    "A vector is a quantity that has both magnitude and direction. Vectors are often represented as arrows in a coordinate system. The length of the arrow represents the magnitude of the vector, and the direction of the arrow represents the direction of the vector.\n",
+    "\n",
+    "Vectors are often used to represent physical quantities such as velocity, acceleration, and force. For example, the velocity of a car can be represented as a vector with a magnitude of 60 miles per hour and a direction of east.\n",
+    "\n",
+    "Vectors can also be used to represent abstract quantities such as the number of people in a city. For example, the population of a city can be represented as a vector with a magnitude of 100,000 and a direction of north.\n",
+    "\n",
+    "Vectors can be added together to form new vectors. For example, the velocity of a car can be added to the velocity of another car to form the velocity of a third car. Vectors can also be multiplied by scalars to form new vectors. For example, the velocity of a car can be multiplied by 2 to form the velocity of a car that is twice as fast.\n",
+    "\n",
+    "## Matrices\n",
+    "\n",
+    "A matrix is a rectangular array of numbers. Matrices are often used to represent linear transformations such as rotations and reflections. For example, a matrix can be used to represent a rotation of 90 degrees clockwise about the origin.\n",
+    "\n",
+    "Matrices can be added together to form new matrices. For example, the matrix representing a rotation of 90 degrees clockwise about the origin can be added to the matrix representing a rotation of 90 degrees counterclockwise about the origin to form the matrix representing a rotation of 180 degrees about the origin.\n",
+    "\n",
+    "Matrices can also be multiplied together to form new matrices. For example, the matrix representing a rotation of 90 degrees clockwise about the origin can be multiplied by the matrix representing a rotation of 90 degrees counterclockwise about the origin to form the matrix representing a rotation of 180 degrees about the origin.\n",
+    "\n",
+    "## Linear Transformations\n",
+    "\n",
+    "A linear transformation is a function that maps vectors to vectors. For example, a rotation of 90 degrees clockwise about the origin is a linear transformation that maps vectors to vectors.\n",
+    "\n",
+    "Linear transformations can be represented as matrices. For example, a rotation of 90 degrees clockwise about the origin can be represented as the matrix\n",
+    "\n",
+    "$$ \\begin{bmatrix} 0 & -1 \\\\ 1 & 0 \\end{bmatrix} $$\n",
+    "\n"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "## Eigenvectors and Eigenvalues\n",
+    "\n",
+    "An eigenvector is a vector that does not change direction when a linear transformation is applied to it. For example, the vector (1, 0) is an eigenvector of the matrix\n",
+    "\n",
+    "$$ \\begin{bmatrix} 0 & -1 \\\\ 1 & 0 \\end{bmatrix} $$\n",
+    "\n",
+    "because it does not change direction when the matrix is applied to it.\n",
+    "\n",
+    "An eigenvalue is a scalar that represents the amount by which an eigenvector is scaled when a linear transformation is applied to it. For example, the eigenvalue of the vector (1, 0) for the matrix\n",
+    "\n",
+    "$$ \\begin{bmatrix} 0 & -1 \\\\ 1 & 0 \\end{bmatrix} $$\n",
+    "\n",
+    "is 1 because the vector is not scaled when the matrix is applied to it.\n",
+    "\n",
+    "## Matrix Decomposition\n",
+    "\n",
+    "Matrix decomposition is the process of breaking a matrix down into its constituent parts. For example, the matrix\n",
+    "\n",
+    "$$ \\begin{bmatrix} 0 & -1 \\\\ 1 & 0 \\end{bmatrix} $$\n",
+    "\n",
+    "can be decomposed into the product of two matrices\n",
+    "\n",
+    "$$ \\begin{bmatrix} 0 & -1 \\\\ 1 & 0 \\end{bmatrix} = \\begin{bmatrix} 0 & 1 \\\\ 1 & 0 \\end{bmatrix} \\begin{bmatrix} 0 & -1 \\\\ 1 & 0 \\end{bmatrix} $$\n",
+    "\n",
+    "The matrix\n",
+    "\n",
+    "$$ \\begin{bmatrix} 0 & 1 \\\\ 1 & 0 \\end{bmatrix} $$\n",
+    "\n",
+    "is called the left eigenvector of the matrix\n",
+    "\n",
+    "$$ \\begin{bmatrix} 0 & -1 \\\\ 1 & 0 \\end{bmatrix} $$\n",
+    "\n",
+    "and the matrix\n",
+    "\n",
+    "$$ \\begin{bmatrix} 0 & -1 \\\\ 1 & 0 \\end{bmatrix} $$\n",
+    "\n",
+    "is called the right eigenvector of the matrix\n",
+    "\n",
+    "$$ \\begin{bmatrix} 0 & -1 \\\\ 1 & 0 \\end{bmatrix} $$\n",
+    "\n",
+    "## Matrix Inversion\n",
+    "\n",
+    "Matrix inversion is the process of finding the inverse of a matrix. For example, the inverse of the matrix\n",
+    "\n",
+    "$$ \\begin{bmatrix} 0 & -1 \\\\ 1 & 0 \\end{bmatrix} $$\n",
+    "\n",
+    "is the matrix\n",
+    "\n",
+    "$$ \\begin{bmatrix} 0 & 1 \\\\ 1 & 0 \\end{bmatrix} $$\n",
+    "\n",
+    "because\n",
+    "\n",
+    "$$ \\begin{bmatrix} 0 & -1 \\\\ 1 & 0 \\end{bmatrix} \\begin{bmatrix} 0 & 1 \\\\ 1 & 0 \\end{bmatrix} = \\begin{bmatrix} 1 & 0 \\\\ 0 & 1 \\end{bmatrix} $$\n",
+    "\n",
+    "## Matrix Multiplication\n",
+    "\n",
+    "Matrix multiplication is the process of multiplying two matrices together. Conceptually, matrix multiplication is the process of applying a linear transformation to a vector. For example, the matrix\n",
+    "\n",
+    "$$ \\begin{bmatrix} 0 & -1 \\\\ 1 & 0 \\end{bmatrix} $$\n",
+    "\n",
+    "can be multiplied by the vector\n",
+    "\n",
+    "$$ \\begin{bmatrix} 1 \\\\ 0 \\end{bmatrix} $$\n",
+    "\n",
+    "to produce the vector\n",
+    "\n",
+    "$$ \\begin{bmatrix} 0 \\\\ 1 \\end{bmatrix} $$\n",
+    "\n",
+    "because\n",
+    "\n",
+    "$$ \\begin{bmatrix} 0 & -1 \\\\ 1 & 0 \\end{bmatrix} \\begin{bmatrix} 1 \\\\ 0 \\end{bmatrix} = \\begin{bmatrix} 0 \\\\ 1 \\end{bmatrix} $$\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
