--- a/2_maths/51_errors.ipynb
+++ b/2_maths/51_errors.ipynb
@@ -9,12 +9,34 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "print('Hello world')"
+    "Mean squared error is also known as the L2 loss function. It is defined as follows:\n",
+    "\n",
+    "$$ \\text{MSE} = \\frac{1}{n} \\sum_{i=1}^n (y_i - \\hat{y}_i)^2 $$\n",
+    "\n",
+    "where $y_i$ is the true value of the $i$th example, $\\hat{y}_i$ is the predicted value of the $i$th example, and $n$ is the number of examples.\n",
+    "\n",
+    "Other common loss functions include the L1 loss function, which is defined as follows:\n",
+    "\n",
+    "$$ \\text{L1} = \\frac{1}{n} \\sum_{i=1}^n |y_i - \\hat{y}_i| $$\n",
+    "\n",
+    "The L1 loss function is also known as the **mean absolute error (MAE)**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "The L1 loss function is less sensitive to outliers than the L2 loss function. For example, if we have the following two vectors:\n",
+    "\n",
+    "$$ \\mathbf{y} = [1, 2, 3, 4, 5] $$\n",
+    "\n",
+    "$$ \\mathbf{\\hat{y}} = [1, 2, 3, 4, 100] $$\n",
+    "\n",
+    "The MSE between these two vectors is 1, while the MAE is 18.4. The MSE is more sensitive to outliers because it squares the difference between the true and predicted values. The L1 loss function is less sensitive to outliers because it takes the absolute value of the difference between the true and predicted values."
    ]
   }
  ],
